<resources>
    <string name="app_name">MyRun1</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register_button">register</string>
    <string name="phone">Phone</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="name">Name</string>
    <string name="major">Major</string>
    <string name="dartmouth_class">Dartmouth Class</string>
    <string name="Register_head">Sign Up</string>
    <string name="Profile_Picture_Picker">Profile Picture Picker</string>
    <string name="dialog_fragment_tag_photo_picker">dialog_fragment_photo_picker</string>
    <string name="ui_profile_toast_save_text">profile saved</string>
    <string name="profile_photo_file_name">profile_photo.png</string>
    <string name="MainActivity">MainActivity</string>
    <string name="action_setting">action_setting</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="change">CHANGE</string>


    <string-array name="ui_profile_photo_picker_items">
        <item>Take from camera</item>
        <item>Select from gallery</item>
    </string-array>
</resources>
